# wax-expresstrade-contract

./: CMakeLists.txt  README.txt  build.sh
AffiliateBank/: CMakeLists.txt  README.txt  build.sh
AffiliateBank/include/: AffiliateBank.hpp
AffiliateBank/src/: AffiliateBank.cpp  CMakeLists.txt
include/: Barter.hpp  acceptor.hpp  common.hpp  date_range.hpp  exchange_fee.hpp  exchange_fees.hpp  fee_processor.hpp  inventory_bank.hpp  syntax_checker.hpp  tables.hpp  wax_express_trade.hpp
src/: Barter.cpp  CMakeLists.txt  wax_express_trade.cpp
unittests/: Scripts for generating bad formed conditions.txt  wetstart.sh  wetwax_body.sh
